--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                 <ul>
 
                     <li><a href="">Home</a></li>
-                    <li><a href="">Cources</a>
+                    <li><a href="">Courses</a>
                         <ul class="submenu">
                             <li><a href="#">HTML</a></li>
                             <li><a href="#">CSS</a></li>
